continued markup shenanigans

--- a/www/index.html
+++ b/www/index.html
@@ -153,12 +153,50 @@
 		<div class="category">
 			<h2>Spending By Category</h2>
 			<div id="category-chart" class="chart-container"></div>
+			<table>
+				<caption>Spending by expense category</caption>
+				<thead>
+					<tr>
+						<th colspan="2">Header content 1</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Payroll</td>
+						<td>$5.3b</td>
+					</tr>
+					<tr>
+						<td>Overtime</td>
+						<td>829m</td>
+					</tr>
+					<tr>
+						<td>Health &amp; Welfare</td>
+						<td>2b</td>
+					</tr>
+					<tr>
+						<td>Pension</td>
+						<td>1.3b</td>
+					</tr>
+					<tr>
+						<td>Other Labor</td>
+						<td>492m</td>
+					</tr>
+					<tr>
+						<td>Non-labor</td>
+						<td>3.9b</td>
+					</tr>
+					<tr>
+						<td>Debt service</td>
+						<td>2.6b</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 
-		<div class="agency">
+		<!-- <div class="agency">
 			<h2>Spending By MTA Agency</h2>
 			<div id="agency-chart" class="chart-container"></div>
-		</div>
+		</div> -->
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 		<script src="js/mta-spending.js"></script>
@@ -166,8 +204,8 @@
 
 		<!-- CREDITS -->
 		<div>
-			<p class="caption">Source: MTA 2018 Final Proposed Budget</p>
-			<p class="caption">Illustrations and interactive by Kelli R. Parker</p>
+			<p class="caption">Source: </p>
+			<p class="caption">Interactive by Kelli R. Parker</p>
 		</div>
 	</article>
 </main>
