fixed the double chart nonsense

--- a/www/index.html
+++ b/www/index.html
@@ -134,9 +134,7 @@
 			<p class="byline">By DAN RIVOLI</p>
 			<p id="datestamp" class="stamp">Published Friday, December 22</p>
 
-			<p>It costs the MTA more than $15 billion a year to run the region’s massive transit network, 24 hours a day, seven days a week. But riders for months have been enduring unreliable, overcrowded and dangerous transit service.</p>
-			<p>The MTA initiated a $836 million repair plan to stabilize the subway system, with $8 billion needed for long term work.</p>
-			<p>With riders stuck in the middle of a transit funding feud between Gov. Cuomo and Mayor de Blasio, the Daily News breaks down how the MTA makes its money each year<!--  and where it goes -->.</p>
+			<p>The Metropolitan Transportation Authority in December approved its budget for 2018 that details more than $16 billion of spending. The Daily News interactive team in November showed <a href="http://interactive.nydailynews.com/project/mta-funding/">how the MTA makes its money.</a> Here's what they spend it on.</p>
 		</div>
 
 		<p class="latest-news">THE LATEST <a href="http://www.nydailynews.com/tags/mta"></a>: <strong id="latest-news-headline"></strong></p>
@@ -150,7 +148,7 @@
 		</div>
 		<!-- ADVERTISMENT END -->
 
-		<div class="category">
+		<div>
 			<h2>Spending By Category</h2>
 			<div id="category-chart" class="chart-container"></div>
 			<table>
@@ -163,40 +161,82 @@
 				<tbody>
 					<tr>
 						<td>Payroll</td>
-						<td>$5.3b</td>
+						<td>$5.3 billion</td>
 					</tr>
 					<tr>
 						<td>Overtime</td>
-						<td>829m</td>
+						<td>829 million</td>
 					</tr>
 					<tr>
 						<td>Health &amp; Welfare</td>
-						<td>2b</td>
+						<td>2 billion</td>
 					</tr>
 					<tr>
 						<td>Pension</td>
-						<td>1.3b</td>
+						<td>1.3 billion</td>
 					</tr>
 					<tr>
-						<td>Other Labor</td>
-						<td>492m</td>
+						<td>Other Labor/Fringe benefits</td>
+						<td>492 million</td>
 					</tr>
 					<tr>
-						<td>Non-labor</td>
-						<td>3.9b</td>
+						<td>Non-labor costs*</td>
+						<td>3.9 billion</td>
 					</tr>
 					<tr>
 						<td>Debt service</td>
-						<td>2.6b</td>
+						<td>2.6 billion</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 
-		<!-- <div class="agency">
+		<div>
 			<h2>Spending By MTA Agency</h2>
 			<div id="agency-chart" class="chart-container"></div>
-		</div> -->
+			<table>
+				<caption>Spending by MTA Agency</caption>
+				<thead>
+					<tr>
+						<th colspan="2">Header content 2</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>NYC Transit/Staten Island Railroad</td>
+						<td>$8.6 billion</td>
+					</tr>
+					<tr>
+						<td>Long Island Railroad</td>
+						<td>1.6b</td>
+					</tr>
+					<tr>
+						<td>Metro North</td>
+						<td>1.3b</td>
+					</tr>
+					<tr>
+						<td>MTA Bus Company</td>
+						<td>773m</td>
+					</tr>
+					<tr>
+						<td>Headquarters**</td>
+						<td>785m</td>
+					</tr>
+					<tr>
+						<td>Bridges &amp; Tunnels</td>
+						<td>596m</td>
+					</tr>
+					<tr>
+						<td>Debt Service</td>
+						<td>2.6b</td>
+					</tr>
+					<tr>
+						<td>MTA General Reserve</td>
+						<td>160m</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 		<script src="js/mta-spending.js"></script>
