--- a/www/index.html
+++ b/www/index.html
@@ -148,7 +148,8 @@
 		</div>
 		<!-- ADVERTISMENT END -->
 
-		<div>
+	<div class="wrapper">
+		<div class="one">
 			<h2>Spending By Category</h2>
 			<div id="category-chart" class="chart-container"></div>
 			<table>
@@ -191,7 +192,7 @@
 			</table>
 		</div>
 
-		<div>
+		<div class="two">
 			<h2>Spending By MTA Agency</h2>
 			<div id="agency-chart" class="chart-container"></div>
 			<table>
@@ -208,35 +209,36 @@
 					</tr>
 					<tr>
 						<td>Long Island Railroad</td>
-						<td>1.6b</td>
+						<td>1.6 billion</td>
 					</tr>
 					<tr>
 						<td>Metro North</td>
-						<td>1.3b</td>
+						<td>1.3 billion</td>
 					</tr>
 					<tr>
 						<td>MTA Bus Company</td>
-						<td>773m</td>
+						<td>773 million</td>
 					</tr>
 					<tr>
-						<td>Headquarters**</td>
-						<td>785m</td>
+						<td>Headquarters</td>
+						<td>785 million</td>
 					</tr>
 					<tr>
 						<td>Bridges &amp; Tunnels</td>
-						<td>596m</td>
+						<td>596 million</td>
 					</tr>
 					<tr>
 						<td>Debt Service</td>
-						<td>2.6b</td>
+						<td>2.6 billion</td>
 					</tr>
 					<tr>
 						<td>MTA General Reserve</td>
-						<td>160m</td>
+						<td>160 million</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+	</div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 		<script src="js/mta-spending.js"></script>
@@ -244,7 +246,8 @@
 
 		<!-- CREDITS -->
 		<div>
-			<p class="caption">Source: </p>
+			<p class="caption">* Non-labor costs include electric power, fuel, insurance, claims, paratransit service contracts, Maintenance and other operating contacts, professional services contracts, materials and supplies.</p>
+			<p class="caption">Source: MTA 2018 Final Proposed Budget</p>
 			<p class="caption">Interactive by Kelli R. Parker</p>
 		</div>
 	</article>
