new numbers from Dan

--- a/www/index.html
+++ b/www/index.html
@@ -132,9 +132,9 @@
 			</div>
 
 			<p class="byline">By DAN RIVOLI</p>
-			<p id="datestamp" class="stamp">Published Friday, December 22</p>
+			<p id="datestamp" class="stamp">Published XXXXXXX</p>
 
-			<p>The Metropolitan Transportation Authority in December approved its budget for 2018 that details more than $16 billion of spending. <a href="http://interactive.nydailynews.com/project/mta-funding/">This chart outlines how the MTA makes its money.</a> The data below shows what they spend it on.</p>
+			<p>In December 1017, the Metropolitan Transportation Authority approved its budget for 2018 that details $16.6 billion of spending. <a href="http://interactive.nydailynews.com/project/mta-funding/">This chart outlines how the MTA makes its money.</a> The data below shows what they spend it on.</p>
 		</div>
 
 		<p class="latest-news">MTA NEWS <a href="http://www.nydailynews.com/tags/mta"></a>: <strong id="latest-news-headline"></strong></p>
@@ -156,29 +156,13 @@
 				<caption>Spending by expense category</caption>
 				<thead>
 					<tr>
-						<th colspan="2">Header content 1</th>
+						<th colspan="2">Category breakdown</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>Payroll</td>
 						<td>$5.3 billion</td>
-					</tr>
-					<tr>
-						<td>Overtime</td>
-						<td>829 million</td>
-					</tr>
-					<tr>
-						<td>Health &amp; Welfare</td>
-						<td>2 billion</td>
-					</tr>
-					<tr>
-						<td>Pension</td>
-						<td>1.3 billion</td>
-					</tr>
-					<tr>
-						<td>Other Labor/Fringe benefits</td>
-						<td>492 million</td>
 					</tr>
 					<tr>
 						<td>Non-labor costs*</td>
@@ -188,8 +172,27 @@
 						<td>Debt service</td>
 						<td>2.6 billion</td>
 					</tr>
+					<tr>
+						<td>Health &amp; Welfare</td>
+						<td>2 billion</td>
+					</tr>
+					<tr>
+						<td>Pension</td>
+						<td>1.4 billion</td>
+					</tr>
+					<tr>
+						<td>Overtime</td>
+						<td>829 million</td>
+					</tr>
+					<tr>
+						<td>Other Labor/Fringe benefits</td>
+						<td>492 million</td>
+					</tr>
+
+
 				</tbody>
 			</table>
+			<p class="caption" style="width: 375px; margin: 20px auto 0 auto;">* Non-labor costs includes $160 million to the MTA's General Reserve and $49 million in other expenses.</p>
 		</div>
 
 		<div class="two">
@@ -199,13 +202,13 @@
 				<caption>Spending by MTA Agency</caption>
 				<thead>
 					<tr>
-						<th colspan="2">Header content 2</th>
+						<th colspan="2">Agency breakdown</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td>NYC Transit/Staten Island Railroad</td>
-						<td>$8.6 billion</td>
+						<td>NYC Transit</td>
+						<td>$8.7 billion</td>
 					</tr>
 					<tr>
 						<td>Long Island Railroad</td>
@@ -220,23 +223,20 @@
 						<td>773 million</td>
 					</tr>
 					<tr>
-						<td>Headquarters</td>
-						<td>785 million</td>
+						<td>Headquarters*</td>
+						<td>722 million</td>
 					</tr>
 					<tr>
 						<td>Bridges &amp; Tunnels</td>
 						<td>596 million</td>
 					</tr>
 					<tr>
-						<td>Debt Service</td>
-						<td>2.6 billion</td>
-					</tr>
-					<tr>
-						<td>MTA General Reserve</td>
-						<td>160 million</td>
+						<td>Staten Island Railway</td>
+						<td>60.2 million</td>
 					</tr>
 				</tbody>
 			</table>
+			<p class="note">* The $722 million in expenses for the MTA headquarters handles functions for different agencies, including MTA Police Department, MTA Security and IT and administration for all agencies.</p>
 		</div>
 	</div>
 
@@ -246,9 +246,7 @@
 
 		<!-- CREDITS -->
 		<div>
-			<p class="caption">* Non-labor costs include electric power, fuel, insurance, claims, paratransit service contracts, Maintenance and other operating contacts, professional services contracts, materials and supplies.</p>
-			<p class="caption">Source: MTA 2018 Final Proposed Budget</p>
-			<p class="caption">Interactive by Kelli R. Parker</p>
+			<p class="caption">Source: MTA 2018 Final Proposed Budget &bullet; Interactive by Kelli R. Parker</p>
 		</div>
 	</article>
 </main>
