final touches before launch

--- a/www/index.html
+++ b/www/index.html
@@ -132,9 +132,9 @@
 			</div>
 
 			<p class="byline">By DAN RIVOLI</p>
-			<p id="datestamp" class="stamp">Published XXXXXXX</p>
+			<p id="datestamp" class="stamp">Published February 13, 2017</p>
 
-			<p>In December 1017, the Metropolitan Transportation Authority approved its budget for 2018 that details $16.6 billion of spending. <a href="http://interactive.nydailynews.com/project/mta-funding/">This chart outlines how the MTA makes its money.</a> The data below shows what they spend it on.</p>
+			<p>In December 2017, the Metropolitan Transportation Authority approved its budget for 2018 that details $16.6 billion of spending. <a href="http://interactive.nydailynews.com/project/mta-funding/">This chart outlines how the MTA makes its money.</a> The data below shows what they spend it on.</p>
 		</div>
 
 		<p class="latest-news">MTA NEWS <a href="http://www.nydailynews.com/tags/mta"></a>: <strong id="latest-news-headline"></strong></p>
