--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,9 @@
 	<meta name="twitter:title" content='Where does the MTA’s money go?' />
 
 	<!-- DESCRIPTION -->
-	<meta name="description" content="It costs the MTA more than $15 billion a year to run 24/7. Who ultimately pays for the service New Yorkers get?" />
-	<meta property="og:description" content="It costs the MTA more than $15 billion a year to run 24/7. Who ultimately pays for the service New Yorkers get?" />
-	<meta name="twitter:description" content="It costs the MTA more than $15 billion a year to run 24/7. Who ultimately pays for the service New Yorkers get?" />
+	<meta name="description" content="The MTA will spend $16.6 billion in its 2018 budget. Which MTA agencies get how much of that pie?" />
+	<meta property="og:description" content="The MTA will spend $16.6 billion in its 2018 budget. Which MTA agencies get how much of that pie?" />
+	<meta name="twitter:description" content="The MTA will spend $16.6 billion in its 2018 budget. Which MTA agencies get how much of that pie?" />
 
 	 <!-- KEYWORD -->
     <meta name="keywords" content="MTA, New York City, MTA budget, MTA spending, what is the MTA's budget" />
@@ -33,7 +33,7 @@
 	<!-- THUMBNAIL IMAGE-->
 	<meta property="og:image" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg" />
 	<meta name="twitter:image" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg" />
-	<meta name="twitter:image:alt" content="A photo illustration of a speeding train blowing a pile of money" />
+	<meta name="twitter:image:alt" content="A photo illustration of a speeding train blowing through a pile of money" />
 	<meta name="twitter:player"     content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg">
 	<meta name="twitter:player:stream" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg">
 	<meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
@@ -100,12 +100,12 @@
 	</script>
 	
 	<!-- ADS-START -->
-	<script src="/includes/ads/ads.js" onload="nydn_ads('project');"></script>
+	<script src="/includes/template/template.js" onload="nydn_ads('project');"></script>
 	<!-- ADS-END -->
 
-	<link rel="stylesheet" type="text/css" href="http://assets.nydailynews.com/nydn/c/rh.css">
-	<link rel="stylesheet" type="text/css" href="http://assets.nydailynews.com/nydn/c/ra.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="//www.nydailynews.com/nydn/c/rh.css">
+	<link rel="stylesheet" type="text/css" href="//www.nydailynews.com/nydn/c/ra.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css?v2">
 
 	<script>var nav_params = {section: 'projects', url: 'http://interactive.nydailynews.com/project/'};</script>
 	<script src="/library/vendor-nav/vendor-include.js" defer></script>
@@ -121,13 +121,13 @@
 <main>
 	<article>
 		<div class="intro">
-			<h2>MTA Spending Breakdown</h2>
+			<div class="dek">MTA Spending Breakdown</div>
 			<h1>MTA Budget: Where the money goes</h1>
 			<div>
 				<ul class="ra-share" id="ra-share-top" style="text-align: center;">
 					<li class="rt-share-f"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://interactive.nydailynews.com/project/mta-spending/">facebook</a> </li>
-					<li class="ra-share-t"> <a target="_blank" href="https://twitter.com/intent/tweet?text=MTA Budget: Where the money comes from&url=http://interactive.nydailynews.com/project/mta-spending/&via=NYDNi&related=NYDNTransit">Tweet</a></li>
-					<li class="ra-share-e"> <a href="mailto:?subject=MTA Budget: Where the money comes from&body=http://interactive.nydailynews.com/project/mta-spending/">email</a> </li>
+					<li class="ra-share-t"> <a target="_blank" href="https://twitter.com/intent/tweet?text=MTA Budget: Where does the money go from&url=http://interactive.nydailynews.com/project/mta-spending/&via=NYDNi&related=NYDNTransit">Tweet</a></li>
+					<li class="ra-share-e"> <a href="mailto:?subject=MTA Budget: Where the money goes&body=http://interactive.nydailynews.com/project/mta-spending/">email</a> </li>
 				</ul>
 			</div>
 
@@ -192,7 +192,7 @@
 
 				</tbody>
 			</table>
-			<p class="caption" style="width: 375px; margin: 20px auto 0 auto;">* Non-labor costs includes $160 million to the MTA's General Reserve and $49 million in other expenses.</p>
+			<p class="note">* Non-labor costs includes $160 million to the MTA's General Reserve and $49 million in other expenses.</p>
 		</div>
 
 		<div class="two">
@@ -241,7 +241,7 @@
 	</div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-		<script src="js/mta-spending.js"></script>
+		<script src="js/mta-spending.js?v2"></script>
 
 
 		<!-- CREDITS -->
