adding a new, bigger table of data

--- a/www/index.html
+++ b/www/index.html
@@ -240,6 +240,43 @@
 		</div>
 	</div>
 
+	<table id="big-table">
+		<caption>Spending by each agency</caption>
+		<thead>
+			<tr>
+				<th style="background-color: #fafafa;">&nbsp;</th>
+				<th>NYC Transit</th>
+				<th>Long Island Railroad</th>
+				<th>Metro North</th>
+				<th>MTA Bus Company</th>
+				<th>Bridges &amp; Tunnels</th>
+				<th>Staten Island Railway</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="first-column">Payroll</td>
+			</tr>
+			<tr>
+				<td class="first-column">Overtime</td>
+			</tr>
+			<tr>
+				<td class="first-column">Health &amp; Welfare</td>
+			</tr>
+			<tr>
+				<td class="first-column">Pension</td>
+			</tr>
+			<tr>
+				<td class="first-column">Other Labor/Fringe Benefits</td>
+			</tr>
+			<tr>
+				<td class="first-column">Non-labor Costs</td>
+			</tr>
+		</tbody>
+	</table>
+
+		<!-- SCRIPT CALLS -->
+
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 		<script src="js/mta-spending.js?v2"></script>
 
