finishing the big chart

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
 	<meta name="twitter:description" content="The MTA will spend $16.6 billion in its 2018 budget. Which MTA agencies get how much of that pie?" />
 
 	 <!-- KEYWORD -->
-    <meta name="keywords" content="MTA, New York City, MTA budget, MTA spending, what is the MTA's budget" />
-    <meta name="news_keywords" content="MTA, New York City, MTA budget, MTA spending, what is the MTA's budget" />
+<meta name="keywords" content="MTA, New York City, MTA budget, MTA spending, what is the MTA's budget" />
+<meta name="news_keywords" content="MTA, New York City, MTA budget, MTA spending, what is the MTA's budget" />
 
 	<!-- LINK -->
 	<link rel="canonical" href="http://interactive.nydailynews.com/project/mta-spending/">
@@ -34,7 +34,7 @@
 	<meta property="og:image" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg" />
 	<meta name="twitter:image" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg" />
 	<meta name="twitter:image:alt" content="A photo illustration of a speeding train blowing through a pile of money" />
-	<meta name="twitter:player"     content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg">
+	<meta name="twitter:player" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg">
 	<meta name="twitter:player:stream" content="http://interactive.nydailynews.com/project/mta-spending/img/mta-spending-share.jpg">
 	<meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
 
@@ -79,9 +79,9 @@
 	<!-- ADOBE ANALYTICS -->
 	<script src="//assets.adobedtm.com/4fc527d6fda921c80e462d11a29deae2e4cf7514/satelliteLib-c91fdc6ac624c6cbcd50250f79786de339793801.js"></script>
 
-	<link href='https://fonts.googleapis.com/css?family=Open%20Sans|Open+Sans+Condensed:300,700|PT+Serif' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,700|PT+Serif" rel="stylesheet">
 	<script data-main="http://assets.nydailynews.com/nydn/js/rh.js?r=20170405001" src="http://assets.nydailynews.com/nydn/js/require.js?r=2016LIST" defer></script>
-	  
+	
 	<script>
 		var nydn = nydn || {
 			"section": "NYDailyNews",
@@ -240,40 +240,88 @@
 		</div>
 	</div>
 
-	<table id="big-table">
+	<div id="big-table">
+	<h3>Spending by individual agency</h3>
+	<table>
 		<caption>Spending by each agency</caption>
 		<thead>
 			<tr>
-				<th style="background-color: #fafafa;">&nbsp;</th>
-				<th>NYC Transit</th>
-				<th>Long Island Railroad</th>
-				<th>Metro North</th>
-				<th>MTA Bus Company</th>
-				<th>Bridges &amp; Tunnels</th>
-				<th>Staten Island Railway</th>
+			<th style="background-color: #fafafa;">&nbsp;</th>
+			<th scope="col">NYC Transit</th>
+			<th scope="col">Long Island Railroad</th>
+			<th scope="col">Metro North</th>
+			<th scope="col">MTA Bus Company</th>
+			<th scope="col">Bridges &amp; Tunnels</th>
+			<th scope="col">Staten Island Railway</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td class="first-column">Payroll</td>
+				<td class="column">Payroll</td>
+				<td data-label="NYC Transit">$3.5 billion</td>
+				<td data-label="Long Island Railroad">$563 million</td>
+				<td data-label="Metro North">$520 million</td>
+				<td data-label="MTA Bus Company">$287 million</td>
+				<td data-label="Bridges &amp; Tunnels">$146 million</td>
+				<td data-label="Staten Island Railway">$25 million</td>
 			</tr>
 			<tr>
-				<td class="first-column">Overtime</td>
+				<td class="column">Overtime</td>
+				<td data-label="NYC Transit">501 million</td>
+				<td data-label="Long Island Railroad">126 million</td>
+				<td data-label="Metro North">96 million</td>
+				<td data-label="MTA Bus Company">65 million</td>
+				<td data-label="Bridges &amp; Tunnels">27 million</td>
+				<td data-label="Staten Island Railway">1.9 million</td>
 			</tr>
 			<tr>
-				<td class="first-column">Health &amp; Welfare</td>
+				<td class="column">Health &amp; Welfare</td>
+				<td data-label="NYC Transit">1.4 billion</td>
+				<td data-label="Long Island Railroad">207 million</td>
+				<td data-label="Metro North">149 million</td>
+				<td data-label="MTA Bus Company">97 million</td>
+				<td data-label="Bridges &amp; Tunnels">56 million</td>
+				<td data-label="Staten Island Railway">9.1 million</td>
 			</tr>
 			<tr>
-				<td class="first-column">Pension</td>
+				<td class="column">Pension</td>
+				<td data-label="NYC Transit">966 million</td>
+				<td data-label="Long Island Railroad">131 million</td>
+				<td data-label="Metro North">105 million</td>
+				<td data-label="MTA Bus Company">53 million</td>
+				<td data-label="Bridges &amp; Tunnels">37 million</td>
+				<td data-label="Staten Island Railway">7 million</td>
 			</tr>
 			<tr>
-				<td class="first-column">Other Labor/Fringe Benefits</td>
+				<td class="column">Other Labor/Fringe Benefits</td>
+				<td data-label="NYC Transit">255 million</td>
+				<td data-label="Long Island Railroad">114 million</td>
+				<td data-label="Metro North">64 million</td>
+				<td data-label="MTA Bus Company">70 million</td>
+				<td data-label="Bridges &amp; Tunnels">12 million</td>
+				<td data-label="Staten Island Railway">5.2 million</td>
 			</tr>
 			<tr>
-				<td class="first-column">Non-labor Costs</td>
+				<td class="column">Non-labor Costs</td>
+				<td data-label="NYC Transit">2 billion</td>
+				<td data-label="Long Island Railroad">489 million</td>
+				<td data-label="Metro North">405 million</td>
+				<td data-label="MTA Bus Company">202 million</td>
+				<td data-label="Bridges &amp; Tunnels">318 million</td>
+				<td data-label="Staten Island Railway">12.1 million</td>
+			</tr>
+			<tr>
+				<td class="column">Totals</td>
+				<td data-label="NYC Transit">$8.7 billion</td>
+				<td data-label="Long Island Railroad">$1.6 billion</td>
+				<td data-label="Metro North">$1.3 billion</td>
+				<td data-label="MTA Bus Company">$773 million</td>
+				<td data-label="Bridges &amp; Tunnels">$596 million</td>
+				<td data-label="Staten Island Railway">$60.2 million</td>
 			</tr>
 		</tbody>
 	</table>
+	</div>
 
 		<!-- SCRIPT CALLS -->
 
@@ -294,7 +342,7 @@
 <footer id="templatefooter"></footer>
 <!-- FOOTER-END -->
 <div id="ra-bp">
-	  </div> <section id="rao">  <div id="rao-close"></div> <div id="rao-wrap"></div> </section>
+	</div> <section id="rao"><div id="rao-close"></div> <div id="rao-wrap"></div> </section>
 </div>
 <div id="r-scripts">
 	<div id="parsely-root" style="display: none">
